--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,8 +1,19 @@
 version: '3.4'
 
 services:
+  catalogdb:
+    container_name: catalogdb
+    restart: always
+    ports:
+      - "27017:27017" 
+    volumes:
+      - mongo-data:/data/db 
   catalog.api:
+    container_name: catalo.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
+    depends_on:
+      - catalogdb
     ports:
-      - "80"
+      - "8000:80"
