--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -5,9 +5,9 @@ services:
     container_name: catalogdb
     restart: always
     ports:
-      - "27017:27017" 
+      - "27017:27017"
     volumes:
-      - mongo-data:/data/db 
+      - mongo_data:/data/db
   catalog.api:
     container_name: catalo.api
     environment:
