--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -8,6 +8,14 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6397:6397"
+    
+
   catalog.api:
     container_name: catalo.api
     environment:
@@ -17,3 +25,14 @@ services:
       - catalogdb
     ports:
       - "8000:80"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=mongodb://basketdb:6397"
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:80"
+
