--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,8 +3,13 @@ version: '3.4'
 services:
   catalogdb:
     image: mongo
+
   basketdb:
     image: redis:alpine
+
+  portainer:
+    image: portainer/portainer-ce
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -18,4 +23,5 @@ services:
 
 volumes:
   mongo_data:
+  portainer_data:
 
