--- a/src/Services/Odering/Ordering.Application/Ordering.Application.csproj
+++ b/src/Services/Odering/Ordering.Application/Ordering.Application.csproj
@@ -9,12 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\" />
     <Folder Include="Behaviours\" />
+    <Folder Include="Features\Orders\Command\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
