--- a/src/Services/Odering/Odering.API/appsettings.json
+++ b/src/Services/Odering/Odering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SqlServer@2019;"
+    "OrderingConnectionString": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=SqlServer@2019;"
   },
   "EmailSettings": {
     "FromAddress": "subhasishbiswas15@gmail.com",
