--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -43,11 +43,18 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
+  odering.api:
+    image: ${DOCKER_REGISTRY-}oderingapi
+    build:
+      context: .
+      dockerfile: Services/Odering/Odering.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
 
 
