--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -98,7 +98,9 @@ services:
     ports:
       - "8003:80"
 
-  odering.api:
+
+
+  ordering.api:
     container_name: ordering.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
