--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -43,17 +43,19 @@ services:
       context: .
       dockerfile: Services/Discount/Discount.Grpc/Dockerfile
 
-  odering.api:
-    image: ${DOCKER_REGISTRY-}oderingapi
+
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
     build:
       context: .
-      dockerfile: Services/Odering/Odering.API/Dockerfile
+      dockerfile: Services/Odering/Ordering.API/Dockerfile
 
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
 
 
 
