Subscribe BasketCheckout Queue Message Event in Ordering BasketCheckoutConsumer

--- a/src/Services/Odering/Ordering.API/appsettings.json
+++ b/src/Services/Odering/Ordering.API/appsettings.json
@@ -1,18 +1,21 @@
 {
-    "ConnectionStrings": {
-      "OrderingConnectionString": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=SqlServer@2019;"
-    },
-    "EmailSettings": {
-      "FromAddress": "subhasishbiswas15@gmail.com",
-      "ApiKey": "",
-      "FromName": "Subhasish"
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=SqlServer@2019;"
+  },
+  "EmailSettings": {
+    "FromAddress": "subhasishbiswas15@gmail.com",
+    "ApiKey": "",
+    "FromName": "Subhasish"
+  },
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
+}
