Test on Docker environment - Shopping.Aggregator into Docker-Compose File

--- a/src/ApiGateways/Shopping.Aggregator/Properties/launchSettings.json
+++ b/src/ApiGateways/Shopping.Aggregator/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43535",
+      "applicationUrl": "http://localhost:5006",
       "sslPort": 0
     }
   },
@@ -19,13 +19,19 @@
     },
     "Shopping.Aggregator": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5006",
+      "dotnetRunMessages": "true"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "publishAllPorts": true
     }
   }
 }
