--- a/src/WebApps/AspnetRunBasics/Properties/launchSettings.json
+++ b/src/WebApps/AspnetRunBasics/Properties/launchSettings.json
@@ -7,6 +7,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5007;http://localhost:5008"
+    },
+    "Docker (1)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
