--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -119,7 +119,6 @@ services:
     ports:
         - "8004:80"
 
-
   ocelotapigw:
     container_name: ocelotapigw
     environment:
@@ -131,7 +130,6 @@ services:
         - ordering.api
     ports:
       - "8010:80"
-
 
   shopping.aggregator:
     container_name: shopping.aggregator 
@@ -147,3 +145,16 @@ services:
     ports:
       - "8005:80"
 
+  aspnetrunbasics:
+    container_name: aspnetrunbasics
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "ApiSettings:GatewayAddress=http://ocelotapigw"
+    depends_on:
+        - ocelotapigw
+        - catalog.api
+        - basket.api
+        - discount.api
+        - ordering.api
+    ports:
+      - "8006:80"
