The most significant changes involve the addition of a new project named "POST.COMMON" to the "CQRS-EVENTSOURCING.sln" solution, and the subsequent addition of this project as a reference to several other projects in the solution. This indicates that these projects will now depend on the "POST.COMMON" project. Additionally, the "CQRS.CORE" project has been added as a reference to several projects, suggesting these projects will now depend on the "CQRS.CORE" project. Lastly, the "POST.CMD.DOMAIN" and "POST.QUERY.DOMAIN" projects have been added as references to their respective "INFRASTRUCTURE" projects, indicating a new dependency.
1. A new project named "POST.COMMON" has been added to the solution "CQRS-EVENTSOURCING.sln". This project has been configured for both Debug and Release configurations for the "Any CPU" platform. (Refer to the project configuration changes in the solution file)

2. The "POST.COMMON" project has been added as a reference to several other projects in the solution, including "POST.CMD.API", "POST.CMD.DOMAIN", "POST.CMD.INFRASTRUCTURE", "POST.QUERY.API", "POST.QUERY.DOMAIN", and "POST.QUERY.INFRASTRUCTURE". (Refer to the project reference changes in the respective project files)

3. The class "Class1" in the "POST.QUERY.DOMAIN" project has been renamed to "Class". (Refer to the class name change in the "POST.QUERY.DOMAIN" project file)

4. The "CQRS.CORE" project has been added as a reference to several projects, including "POST.CMD.DOMAIN", "POST.CMD.INFRASTRUCTURE", "POST.COMMON", "POST.QUERY.DOMAIN", and "POST.QUERY.INFRASTRUCTURE". (Refer to the project reference changes in the respective project files)

5. The "POST.CMD.DOMAIN" project has been added as a reference to the "POST.CMD.INFRASTRUCTURE" project, and the "POST.QUERY.DOMAIN" project has been added as a reference to the "POST.QUERY.INFRASTRUCTURE" project. (Refer to the project reference changes in the "POST.CMD.INFRASTRUCTURE" and "POST.QUERY.INFRASTRUCTURE" project files)

--- a/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.DOMAIN/POST.CMD.DOMAIN.csproj
+++ b/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.DOMAIN/POST.CMD.DOMAIN.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS.CORE\CQRS.CORE.csproj" />
+    <ProjectReference Include="..\POST.COMMON\POST.COMMON.csproj" />
+  </ItemGroup>
+
 </Project>
