--- a/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.INFRASTRUCTURE/POST.CMD.INFRASTRUCTURE.csproj
+++ b/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.INFRASTRUCTURE/POST.CMD.INFRASTRUCTURE.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS.CORE\CQRS.CORE.csproj" />
+    <ProjectReference Include="..\POST.CMD.DOMAIN\POST.CMD.DOMAIN.csproj" />
+  </ItemGroup>
+
 </Project>
