--- a/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.API/POST.CMD.API.csproj
+++ b/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.API/POST.CMD.API.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\CQRS.CORE\CQRS.CORE.csproj" />
     <ProjectReference Include="..\POST.CMD.DOMAIN\POST.CMD.DOMAIN.csproj" />
     <ProjectReference Include="..\POST.CMD.INFRASTRUCTURE\POST.CMD.INFRASTRUCTURE.csproj" />
+    <ProjectReference Include="..\POST.COMMON\POST.COMMON.csproj" />
   </ItemGroup>
 
 </Project>
