The most significant changes involve the addition of new package references to various project files. These include the addition of `MongoDB.Driver` to `CQRS.CORE.csproj` and `POST.CMD.INFRASTRUCTURE.csproj`, `Confluent.Kafka` and `Microsoft.Extensions.Options` to `POST.CMD.INFRASTRUCTURE.csproj`, and `Confluent.Kafka`, `Microsoft.EntityFrameworkCore.SqlServer`, and `Microsoft.Extensions.Hosting` to `POST.QUERY.INFRASTRUCTURE.csproj`.
Changes:

1. The `CQRS.CORE.csproj` file now includes a new package reference to `MongoDB.Driver` version `2.25.0`. This change allows the project to interact with MongoDB databases.

2. The `POST.CMD.INFRASTRUCTURE.csproj` file has been updated with several new package references. These include `Confluent.Kafka` version `2.3.0`, which enables the project to interact with Kafka, `Microsoft.Extensions.Options` version `6.0.0`, which provides a set of APIs for configuring options, and `MongoDB.Driver` version `2.25.0` for MongoDB database interactions.

3. The `POST.QUERY.INFRASTRUCTURE.csproj` file now includes new package references to `Confluent.Kafka` version `2.3.0`, `Microsoft.EntityFrameworkCore.SqlServer` version `6.0.29`, and `Microsoft.Extensions.Hosting` version `6.0.1`. These changes enable the project to interact with Kafka, SQL Server databases, and provide hosting services, respectively.

--- a/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.QUERY.INFRASTRUCTURE/POST.QUERY.INFRASTRUCTURE.csproj
+++ b/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.QUERY.INFRASTRUCTURE/POST.QUERY.INFRASTRUCTURE.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CQRS.CORE\CQRS.CORE.csproj" />
     <ProjectReference Include="..\POST.QUERY.DOMAIN\POST.QUERY.DOMAIN.csproj" />
   </ItemGroup>
