--- a/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.INFRASTRUCTURE/POST.CMD.INFRASTRUCTURE.csproj
+++ b/Udemy/ CQRS-Event-Sourcing/SUBHASISH/CQRS-EVENTSOURCING/POST.CMD.INFRASTRUCTURE/POST.CMD.INFRASTRUCTURE.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CQRS.CORE\CQRS.CORE.csproj" />
     <ProjectReference Include="..\POST.CMD.DOMAIN\POST.CMD.DOMAIN.csproj" />
   </ItemGroup>
